##Text encoding: utf-8

2005-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/isotope.cc: fixed a loop boundary bug.
	* programs/gchemcalc.cc: do not display peaks lower than 0.1 in
	isotopic patterns instead of 0.001.

2005-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: fixed mass of 13C.
	* gcu/element.cc: enhanced isotopic pattern calculation.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h: ditto.
	* glade/gchemcalc.glade: added monoisotopic mass.
	* programs/gchemcalc.cc: display isotopic patterns.

2005-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.cc: finished isotopic pattern calculation.
	* gcu/formula.cc: ditto.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h: ditto.
	* programs/gchemcalc.cc: calculate isotopic pattern and show the
	notebook page only if valid.

2005-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice >= 0.0.3.
	* database/isotopes.xml.in: fixed errors.
	* gcu/crystalatom.cc: added missing headers.
	* gcu/element.cc: started work on isotopic pattern calculation.
	* gcu/element.h: ditto.
	* gcu/formula.cc: ditto.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h:ditto.
	* glade/gchemcalc.glade: add widgets to display composition and
	isotopic pattern.

2005-07-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: name is now a child node instead of a property
	to avoid duplication of the whole isotope node on translation.
	* gcu/Makefile.am: add isotope.*
	* gcu/chemistry.h: add GcuIsotope, GcuValue and GcuDimensionalValue structs
	and use GcuValue instead of double in radii.
	* gcu/crystalatom.cc: use GcuValue in radii.
	* gcu/crystalatom.h: ditto.
	* gcu/element.cc: load isotopes database.
	* gcu/element.h: ditto.
	* gcu/formula.cc: add gcu::Formula::CalculateIsotopicPattern (not yet
	implemented).
	* gcu/formula.h:
	* gcu/isotope.cc: new file; implements gcu::Isotope and
	gcu:IsotopicPattern.
	* gcu/isotope.h: ditto.